<!-- @author Jenni Javanainen-->
<resources>
    <string name="app_name">HEADgehog</string>
    <string name="save_migraine_button">Save</string>
    <string name="add_new_migraine_button">Create new migraine log</string>
    <string name="edit_migraine_button">Log new migraine event</string>
    <string name="main_menu_item">Main</string>
    <string name="stats_menu_item">History</string>
    <string name="settings_menu_item">Settings</string>
    <string name="select_date">Edit date</string>
    <string name="select_time">Edit time</string>
    <string name="text_date">Date</string>
    <string name="text_time">Time</string>
    <string name="start_header">Add attributes</string>
    <string name="triggers_text">What sort of things trigger your migraine?</string>
    <string name="triggers_hint">E.g. dehydration</string>
    <string name="symptoms_text">What kind of migraine symptoms do you have?</string>
    <string name="symptoms_hint">E.g. nausea</string>
    <string name="medicines_text">Which medicines do you use for treatment?</string>
    <string name="medicines_hint">E.g. Paracetamol 500mg</string>
    <string name="treatments_text">What non-medical treatments do you use?</string>
    <string name="treatments_hint">E.g. nap</string>
    <string name="edit_triggers">Edit Your Triggers</string>
    <string name="edit_symptoms">Edit Your Symptoms</string>
    <string name="edit_medicines">Edit Your Medicines</string>
    <string name="edit_treatments">Edit Your Treatments</string>
    <string name="info_item_exists">Input already exists</string>
    <string name="info_exceeds">Maximum 10 attributes allowed</string>
    <string name="info_long_word">Maximum 20 characters allowed</string>
    <string name="info_empty">Please insert valid attribute</string>
    <string name="average_text">Average migraine attack length:</string>
    <string name="last_migraine_text">The date of your last migraine:</string>
    <string name="migraines_total_text">Number of migraines in the last 30 days:</string>
    <string name="start_title">HEADgehog</string>
    <string name="start_subtitle">The Migraine App</string>
    <string name="pain">Pain [0–10]</string>
    <string name="end_migraine">End active migraine</string>


</resources>