<?xml version="1.0" encoding="utf-8"?>
<!-- @author Jenni Javanainen & Teemu Pennanen-->
<!-- calendar icon https://freeicons.io/business-and-online-icons/calendar-icon-icon-10-->
<!-- clock icon https://freeicons.io/business-and-online-icons/clock-icon-icon-6-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AddMigraineActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:layout_editor_absoluteX="-107dp"
      tools:layout_editor_absoluteY="55dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="42dp"
              android:layout_marginVertical="16dp">

              <TextView
                  android:id="@+id/in_date"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentTop="true"
                  android:text="@string/text_date"
                  app:layout_constraintBaseline_toBaselineOf="@+id/btn_date"
                  app:layout_constraintEnd_toStartOf="@+id/dateIcon"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
                  tools:ignore="SpeakableTextPresentCheck" />

              <Button
                  android:id="@+id/btn_date"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignBottom="@+id/in_date"
                  android:layout_toEndOf="@+id/in_date"
                  android:onClick="selectDate"
                  android:text="@string/select_date"
                  app:layout_constraintBottom_toTopOf="@+id/btn_time"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

              <ImageView
                  android:id="@+id/dateIcon"
                  android:layout_width="42dp"
                  android:layout_height="44dp"
                  android:layout_marginHorizontal="16dp"
                  android:src="@drawable/calendar_icon"
                  app:layout_constraintBottom_toBottomOf="@+id/in_date"
                  app:layout_constraintEnd_toStartOf="@+id/btn_date"
                  app:layout_constraintHorizontal_bias="1.0"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintVertical_bias="0.0" />

              <TextView
                  android:id="@+id/in_time"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/in_date"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentLeft="true"
                  android:text="@string/text_time"
                  app:layout_constraintBaseline_toBaselineOf="@+id/btn_time"
                  app:layout_constraintEnd_toStartOf="@+id/timeIcon"
                  app:layout_constraintHorizontal_bias="0.5"
                  app:layout_constraintStart_toStartOf="parent"
                  tools:ignore="SpeakableTextPresentCheck" />

              <Button
                  android:id="@+id/btn_time"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/btn_date"
                  android:layout_alignStart="@+id/btn_date"
                  android:layout_alignLeft="@+id/btn_date"
                  android:layout_marginTop="16dp"
                  android:onClick="selectTime"
                  android:text="@string/select_time"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/btn_date" />

              <ImageView
                  android:id="@+id/timeIcon"
                  android:layout_width="42dp"
                  android:layout_height="44dp"
                  android:layout_marginHorizontal="16dp"
                  android:src="@drawable/clock_icon"
                  app:layout_constraintBottom_toTopOf="@+id/pain"
                  app:layout_constraintEnd_toStartOf="@+id/btn_time"
                  app:layout_constraintHorizontal_bias="1.0"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintVertical_bias="0.735" />

              <TextView
                  android:id="@+id/pain"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/in_time"
                  android:gravity="center"
                  android:text="@string/pain"
                  app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/in_time"
                  tools:ignore="SpeakableTextPresentCheck" />

              <SeekBar
                  android:id="@+id/seekBar"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:max="10"
                  android:progress="0"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toStartOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/pain" />

          </androidx.constraintlayout.widget.ConstraintLayout>

          <LinearLayout
              android:id="@+id/linear_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

          </LinearLayout>

          <Button
              android:layout_gravity="center_horizontal"
              android:id="@+id/saveMigraineButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:onClick="saveButtonClicked"
              android:text="@string/save_migraine_button"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.498"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="@+id/guideline2" />
      </LinearLayout>
  </ScrollView>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.7564979" />


</androidx.constraintlayout.widget.ConstraintLayout>